// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the <LayoutWrapper /> component should render layout with  dark theme correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0 0.5rem;
  height: 100vh;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 main {
  margin-bottom: auto;
}

.c2 {
  background-color: transparent;
  margin-right: 0.5rem;
}

.c2 svg {
  height: 1.75rem;
}

.c1 .menu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
}

.c1 .menu ul li a {
  display: block;
  padding: 1.5rem 0.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .menu .toggle {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c1 .menu .toggle a svg {
  height: 2rem;
  font-size: 2rem;
}

.c1 .menu .logo {
  font-size: 2rem;
  padding: 0.75rem 1rem 0.75rem 0;
}

.c1 .menu .item {
  padding: 1rem;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
  width: 100%;
  text-align: center;
  display: none;
  font-size: 1.25rem;
  border-top: 1px solid;
  border-bottom: 1px solid;
}

.c1 .active .item {
  display: block;
}

.c1 .theme-toggle {
  display: none;
}

.c3 .container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 4rem 0 1.5rem;
}

.c3 .container .social-icons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.75rem;
}

.c3 .container .social-icons a svg {
  height: 1.25rem;
  font-size: 1.25rem;
  margin: 0 0.75rem;
}

.c3 .container .general-information,
.c3 .container .github-project-info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  font-size: 1rem;
  line-height: 1.25rem;
  opacity: 0.8;
}

.c3 .container .general-information p,
.c3 .container .github-project-info p {
  margin: 0 0.5rem;
}

@media all and (min-width:960px) {
  .c0 {
    max-width: 64rem;
    margin: 0 auto;
  }
}

@media all and (min-width:700px) {
  .c2 svg {
    height: 1rem;
  }
}

@media all and (min-width:700px) {
  .c1 .menu {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }

  .c1 .menu .logo {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .c1 .menu .toggle {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    text-align: right;
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

@media all and (min-width:960px) {
  .c1 .menu {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    background: none;
  }

  .c1 .menu .logo {
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
  }

  .c1 .menu .item {
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
    position: relative;
    display: block;
    width: auto;
    font-size: 1rem;
    border: none;
  }

  .c1 .menu .toggle {
    display: none;
  }

  .c1 .menu .theme-toggle {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
    display: inherit;
    padding: 1rem;
  }
}

<div
  className="c0"
>
  <header>
    <nav
      className="c1"
    >
      <ul
        className="menu"
      >
        <li
          className="logo"
        >
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            BlogApp
          </a>
        </li>
        <li
          className="item"
        >
          <a
            href="/blog"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Blog
          </a>
        </li>
        <li
          className="theme-toggle"
        >
          <button
            aria-label="Toggle dark mode"
            className="c2"
            onClick={[MockFunction mockedFunction]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-moon fa-w-16 "
              data-icon="moon"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </button>
        </li>
        <li
          className="toggle"
        >
          <button
            aria-label="Toggle dark mode"
            className="c2"
            onClick={[MockFunction mockedFunction]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-moon fa-w-16 "
              data-icon="moon"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </button>
          <a
            aria-label="Click to open mobile menu"
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-bars fa-w-14 "
              data-icon="bars"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
        </li>
      </ul>
    </nav>
  </header>
  <main>
    <p>
      test
    </p>
  </main>
  <footer
    className="c3"
  >
    <div
      className="container"
    >
      <div
        className="social-icons"
      >
        <a
          aria-label="Link to github"
          href="https://github.com/katiaipduarte"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-github fa-w-16 "
            data-icon="github"
            data-prefix="fab"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 496 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
        <a
          aria-label="Link to linkedin"
          href="https://www.linkedin.com/in/katiaipduarte/"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-linkedin fa-w-14 "
            data-icon="linkedin"
            data-prefix="fab"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
      <div
        className="general-information"
      >
        <p
          aria-label="Made By Katia Duarte"
          tabIndex={0}
        >
          Katia Duarte
        </p>
        <p>
           • 
        </p>
        <p
          tabIndex={0}
        >
          © 2021
        </p>
        <p>
           • 
        </p>
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Blog App
        </a>
      </div>
      <div
        className="github-project-info"
      >
        <a
          href="https://github.com/katiaipduarte/blog-app"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Next.js Blog App
        </a>
      </div>
    </div>
  </footer>
</div>
`;

exports[`the <LayoutWrapper /> component should render layout with light theme correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0 0.5rem;
  height: 100vh;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 main {
  margin-bottom: auto;
}

.c2 {
  background-color: transparent;
  margin-right: 0.5rem;
}

.c2 svg {
  height: 1.75rem;
}

.c1 .menu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  list-style-type: none;
}

.c1 .menu ul li a {
  display: block;
  padding: 1.5rem 0.5rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1 .menu .toggle {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c1 .menu .toggle a svg {
  height: 2rem;
  font-size: 2rem;
}

.c1 .menu .logo {
  font-size: 2rem;
  padding: 0.75rem 1rem 0.75rem 0;
}

.c1 .menu .item {
  padding: 1rem;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
  width: 100%;
  text-align: center;
  display: none;
  font-size: 1.25rem;
  border-top: 1px solid;
  border-bottom: 1px solid;
}

.c1 .active .item {
  display: block;
}

.c1 .theme-toggle {
  display: none;
}

.c3 .container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 4rem 0 1.5rem;
}

.c3 .container .social-icons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.75rem;
}

.c3 .container .social-icons a svg {
  height: 1.25rem;
  font-size: 1.25rem;
  margin: 0 0.75rem;
}

.c3 .container .general-information,
.c3 .container .github-project-info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  font-size: 1rem;
  line-height: 1.25rem;
  opacity: 0.8;
}

.c3 .container .general-information p,
.c3 .container .github-project-info p {
  margin: 0 0.5rem;
}

@media all and (min-width:960px) {
  .c0 {
    max-width: 64rem;
    margin: 0 auto;
  }
}

@media all and (min-width:700px) {
  .c2 svg {
    height: 1rem;
  }
}

@media all and (min-width:700px) {
  .c1 .menu {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }

  .c1 .menu .logo {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }

  .c1 .menu .toggle {
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
    text-align: right;
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

@media all and (min-width:960px) {
  .c1 .menu {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
    -webkit-flex-wrap: nowrap;
    -ms-flex-wrap: nowrap;
    flex-wrap: nowrap;
    background: none;
  }

  .c1 .menu .logo {
    -webkit-order: 0;
    -ms-flex-order: 0;
    order: 0;
  }

  .c1 .menu .item {
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
    position: relative;
    display: block;
    width: auto;
    font-size: 1rem;
    border: none;
  }

  .c1 .menu .toggle {
    display: none;
  }

  .c1 .menu .theme-toggle {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
    display: inherit;
    padding: 1rem;
  }
}

<div
  className="c0"
>
  <header>
    <nav
      className="c1"
    >
      <ul
        className="menu"
      >
        <li
          className="logo"
        >
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            BlogApp
          </a>
        </li>
        <li
          className="item"
        >
          <a
            href="/blog"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            Blog
          </a>
        </li>
        <li
          className="theme-toggle"
        >
          <button
            aria-label="Toggle dark mode"
            className="c2"
            onClick={[MockFunction mockedFunction]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-moon fa-w-16 "
              data-icon="moon"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </button>
        </li>
        <li
          className="toggle"
        >
          <button
            aria-label="Toggle dark mode"
            className="c2"
            onClick={[MockFunction mockedFunction]}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-moon fa-w-16 "
              data-icon="moon"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </button>
          <a
            aria-label="Click to open mobile menu"
            onClick={[Function]}
            role="button"
            tabIndex={0}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-bars fa-w-14 "
              data-icon="bars"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </a>
        </li>
      </ul>
    </nav>
  </header>
  <main>
    <p>
      test
    </p>
  </main>
  <footer
    className="c3"
  >
    <div
      className="container"
    >
      <div
        className="social-icons"
      >
        <a
          aria-label="Link to github"
          href="https://github.com/katiaipduarte"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-github fa-w-16 "
            data-icon="github"
            data-prefix="fab"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 496 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
        <a
          aria-label="Link to linkedin"
          href="https://www.linkedin.com/in/katiaipduarte/"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-linkedin fa-w-14 "
            data-icon="linkedin"
            data-prefix="fab"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
      <div
        className="general-information"
      >
        <p
          aria-label="Made By Katia Duarte"
          tabIndex={0}
        >
          Katia Duarte
        </p>
        <p>
           • 
        </p>
        <p
          tabIndex={0}
        >
          © 2021
        </p>
        <p>
           • 
        </p>
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Blog App
        </a>
      </div>
      <div
        className="github-project-info"
      >
        <a
          href="https://github.com/katiaipduarte/blog-app"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Next.js Blog App
        </a>
      </div>
    </div>
  </footer>
</div>
`;

exports[`the <LayoutWrapper /> component should render layout without theme 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0 0.5rem;
  height: 100vh;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 main {
  margin-bottom: auto;
}

.c1 .container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 4rem 0 1.5rem;
}

.c1 .container .social-icons {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.75rem;
}

.c1 .container .social-icons a svg {
  height: 1.25rem;
  font-size: 1.25rem;
  margin: 0 0.75rem;
}

.c1 .container .general-information,
.c1 .container .github-project-info {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 0.5rem;
  font-size: 1rem;
  line-height: 1.25rem;
  opacity: 0.8;
}

.c1 .container .general-information p,
.c1 .container .github-project-info p {
  margin: 0 0.5rem;
}

@media all and (min-width:960px) {
  .c0 {
    max-width: 64rem;
    margin: 0 auto;
  }
}

<div
  className="c0"
>
  <header>
    <div />
  </header>
  <main>
    <p>
      test
    </p>
  </main>
  <footer
    className="c1"
  >
    <div
      className="container"
    >
      <div
        className="social-icons"
      >
        <a
          aria-label="Link to github"
          href="https://github.com/katiaipduarte"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-github fa-w-16 "
            data-icon="github"
            data-prefix="fab"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 496 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
        <a
          aria-label="Link to linkedin"
          href="https://www.linkedin.com/in/katiaipduarte/"
          rel="noopener noreferrer"
          role="button"
          target="_blank"
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-linkedin fa-w-14 "
            data-icon="linkedin"
            data-prefix="fab"
            focusable="false"
            role="img"
            style={Object {}}
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
      <div
        className="general-information"
      >
        <p
          aria-label="Made By Katia Duarte"
          tabIndex={0}
        >
          Katia Duarte
        </p>
        <p>
           • 
        </p>
        <p
          tabIndex={0}
        >
          © 2021
        </p>
        <p>
           • 
        </p>
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Blog App
        </a>
      </div>
      <div
        className="github-project-info"
      >
        <a
          href="https://github.com/katiaipduarte/blog-app"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Next.js Blog App
        </a>
      </div>
    </div>
  </footer>
</div>
`;
